--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             opacity: 0.9;
         }
 
-        /* Customer Actions Section */
+        /* Customer Actions Section - FIXED LAYOUT */
         .customer-actions {
             padding: 3rem 2rem;
             background: white;
@@ -146,6 +146,7 @@
             justify-content: center;
             gap: 1.5rem;
             flex-wrap: wrap;
+            align-items: stretch;
         }
 
         .action-card {
@@ -159,6 +160,10 @@
             flex: 1;
             min-width: 180px;
             max-width: 220px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
         }
 
         .action-card:hover {
@@ -188,6 +193,7 @@
             cursor: pointer;
             transition: all 0.3s;
             width: 100%;
+            margin-top: auto;
         }
 
         .btn-action:hover {
@@ -562,19 +568,6 @@
             background: var(--accent-teal);
         }
 
-        /* New styles for embedded forms */
-        .embedded-form-modal {
-            max-width: 90%;
-            width: 90%;
-            height: 90vh;
-        }
-        
-        .embedded-form-container {
-            width: 100%;
-            height: 80vh;
-            border: none;
-        }
-
         /* Responsive */
         @media (max-width: 768px) {
             .nav-links {
@@ -868,15 +861,6 @@
         </div>
     </div>
 
-    <!-- Embedded Form Modal -->
-    <div id="embedded-form-modal" class="modal">
-        <div class="modal-content embedded-form-modal">
-            <span class="close-modal" onclick="closeModal('embedded-form-modal')">&times;</span>
-            <h2 class="modal-title" id="embedded-form-title">Google Form</h2>
-            <iframe id="embedded-form-iframe" class="embedded-form-container" src=""></iframe>
-        </div>
-    </div>
-
     <!-- Staff Login Modal -->
     <div id="staff-login-modal" class="modal">
         <div class="modal-content">
@@ -925,11 +909,10 @@
             event.target.classList.add('active');
         }
 
-        // NEW: Google Forms Integration
+        // FIXED: Google Forms Integration - NOW OPENS IN NEW TAB
         function openGoogleForm(formId) {
-            const formUrl = `https://docs.google.com/forms/d/e/${formId}/viewform?embedded=true`;
-            document.getElementById('embedded-form-iframe').src = formUrl;
-            document.getElementById('embedded-form-modal').style.display = 'flex';
+            const formUrl = `https://docs.google.com/forms/d/e/${formId}/viewform`;
+            window.open(formUrl, '_blank');
         }
 
         function openGoogleSheets() {
@@ -939,10 +922,6 @@
         // Modal Functions
         function closeModal(modalId) {
             document.getElementById(modalId).style.display = 'none';
-            // Clear iframe when closing
-            if (modalId === 'embedded-form-modal') {
-                document.getElementById('embedded-form-iframe').src = '';
-            }
         }
 
         // Close modal when clicking outside
@@ -951,8 +930,6 @@
             for (let i = 0; i < modals.length; i++) {
                 if (event.target == modals[i]) {
                     modals[i].style.display = 'none';
-                    // Clear iframe when closing
-                    document.getElementById('embedded-form-iframe').src = '';
                 }
             }
         }
