--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             opacity: 0.9;
         }
 
-        /* Customer Actions Section - FIXED ALIGNMENT */
+        /* Customer Actions Section - ORIGINAL WORKING ALIGNMENT */
         .customer-actions {
             padding: 3rem 2rem;
             background: white;
@@ -141,7 +141,7 @@
 
         .actions-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 2rem;
             max-width: 900px;
             margin: 0 auto;
@@ -158,7 +158,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            min-height: 240px;
+            min-height: 220px;
             transition: all 0.3s ease;
         }
 
@@ -177,17 +177,13 @@
             font-weight: 600;
             margin-bottom: 1rem;
             color: var(--text-dark);
-            flex-grow: 1;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
 
         .btn-action {
             background: var(--primary-blue);
             color: white;
             border: none;
-            padding: 14px 24px;
+            padding: 12px 24px;
             border-radius: 8px;
             font-weight: 600;
             cursor: pointer;
@@ -196,7 +192,6 @@
             display: inline-block;
             width: 100%;
             font-size: 1rem;
-            margin-top: auto;
         }
 
         .btn-action:hover {
@@ -661,7 +656,7 @@
             </div>
         </section>
 
-        <!-- Customer Actions Section - FIXED WITH CORRECT LINKS -->
+        <!-- Customer Actions Section - ORIGINAL WORKING ALIGNMENT -->
         <section class="customer-actions" id="apply">
             <h2 class="section-title">Customer Services</h2>
             <p class="section-subtitle">Quick access to our most requested services</p>
@@ -762,7 +757,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="70151d025e191e0415021e1504031502061913150330171d11191c5e131f1d">[email&#160;protected]</a></span>
+                        <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="fc99918ed2959288998e9299888f998e8a959f998fbc9b919d9590d29f9391">[email&#160;protected]</a></span>
                     </div>
                 </div>
             </div>
