--- a/index.html
+++ b/index.html
@@ -661,15 +661,11 @@
     <!-- Main Public Website -->
     <div id="public-website">
         <!-- Hero Section -->
+        <!-- Hero Section -->
         <section class="hero">
             <div class="hero-content">
-                <div class="hero-logo">
-                    <img src="images/logo1.jpg" alt="EMR Telecommunications Logo">
-                </div>
-                <div class="hero-text">
-                    <h1>STAY CONNECTED WITH CONFIDENCE</h1>
-                    <p>Experience blazing-fast internet with EMR Internet Services - where reliability meets ultra-speed for your home and business</p>
-                </div>
+                <h1>STAY CONNECTED WITH CONFIDENCE</h1>
+                <p>Experience blazing-fast internet with EMR Internet Services - where reliability meets ultra-speed for your home and business</p>
             </div>
         </section>
 
@@ -1141,4 +1137,5 @@
     </script>
 </body>
 </html>
+
 
