--- a/index.html
+++ b/index.html
@@ -114,18 +114,19 @@
         .hero {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 8rem 2rem 4rem;
+            padding: 20rem 2rem 8rem;
             text-align: center;
             position: relative;
+            min-height: 500px;
             display: flex;
             align-items: flex-end;
-            min-height: 60vh;
+            justify-content: center;
         }
         
         .hero-content {
             max-width: 800px;
             margin: 0 auto;
-            padding-bottom: 2rem;
+            padding-bottom: 4rem;
         }
         
         .hero h1 {
@@ -1133,6 +1134,7 @@
     </script>
 </body>
 </html>
+
 
 
 
