--- a/index.html
+++ b/index.html
@@ -114,19 +114,15 @@
         .hero {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 20rem 2rem 8rem;
+            padding: 25rem 2rem 5rem;
             text-align: center;
             position: relative;
-            min-height: 500px;
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
         }
         
         .hero-content {
             max-width: 800px;
             margin: 0 auto;
-            padding-bottom: 4rem;
+            transform: translateY(100px);
         }
         
         .hero h1 {
@@ -1134,6 +1130,7 @@
     </script>
 </body>
 </html>
+
 
 
 
