--- a/index.html
+++ b/index.html
@@ -114,15 +114,20 @@
         .hero {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 25rem 2rem 5rem;
+            padding: 8rem 2rem 4rem;
             text-align: center;
             position: relative;
+            display: flex;
+            align-items: flex-end;
+            min-height: 500px;
+            box-sizing: border-box;
         }
         
         .hero-content {
             max-width: 800px;
             margin: 0 auto;
-            transform: translateY(100px);
+            width: 100%;
+            padding-bottom: 3rem;
         }
         
         .hero h1 {
@@ -1130,6 +1135,7 @@
     </script>
 </body>
 </html>
+
 
 
 
