--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), 
+                url('images/Modern_telecommunications_hero background.png');
+            background-size: cover;
+            background-position: center;
             color: white;
             padding: 8rem 2rem 4rem;
             text-align: center;
@@ -1135,6 +1138,7 @@
     </script>
 </body>
 </html>
+
 
 
 
