--- a/index.html
+++ b/index.html
@@ -112,10 +112,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), 
-                url('images/Modern_telecommunications_hero background.png');
-            background-size: cover;
-            background-position: center;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             padding: 8rem 2rem 4rem;
             text-align: center;
@@ -1138,6 +1135,7 @@
     </script>
 </body>
 </html>
+
 
 
 
