--- a/index.html
+++ b/index.html
@@ -114,20 +114,14 @@
         .hero {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 8rem 2rem 4rem;
+            padding: 30rem 2rem 5rem !important;
             text-align: center;
             position: relative;
-            display: flex;
-            align-items: flex-end;
-            min-height: 500px;
-            box-sizing: border-box;
         }
         
         .hero-content {
             max-width: 800px;
             margin: 0 auto;
-            width: 100%;
-            padding-bottom: 3rem;
         }
         
         .hero h1 {
@@ -1135,6 +1129,7 @@
     </script>
 </body>
 </html>
+
 
 
 
