--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: url('../images/Modern_telecommunications_hero background.png') no-repeat center center;
             color: white;
             padding: 4rem 2rem 2rem;
             text-align: center;
@@ -1134,6 +1134,7 @@
     </script>
 </body>
 </html>
+
 
 
 
