--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         
         /* Hero Section */
         .hero {
-            background: url('../images/Modern_telecommunications_hero background.png') no-repeat center center;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), 
+                url('images/Modern_telecommunications_hero background.png');
             color: white;
             padding: 4rem 2rem 2rem;
             text-align: center;
@@ -1134,6 +1135,7 @@
     </script>
 </body>
 </html>
+
 
 
 
