--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), 
-                url('images/Modern_telecommunications_hero background.png');
+                url('images/Modern_telecommunications_hero background-1.png');
             color: white;
             padding: 4rem 2rem 2rem;
             text-align: center;
@@ -1135,6 +1135,7 @@
     </script>
 </body>
 </html>
+
 
 
 
